static/css/chatroom.css
#chat-form {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    padding: 10px;
    background-color: #f3dcdcc0;
}

.chat-box {
    height: 450px;
    margin-left: 20px;
    margin-right: 20px;
    width: 65%;
    float: left;
    padding: 10px;
    border: 1px solid #000000;
    border-radius: 20px;
    overflow: auto;
}

.timestamp {
    font-size: 0.8em;
    color: gray;
}

.user-count {
	text-align: center;
	height: 450px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 10px;
    border: 1px solid #000000;
    border-radius: 20px;
    overflow: auto;
}

